welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt (c:Color,isFacingTrail():Boolean){
 	if (isFacingTrail()==true){
 	avance()	
 	         }

 }